// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SyntaxHighlighter component renders custom react component where pre tag is by default 1`] = `
<p
  style={
    Object {
      "background": "#F0F0F0",
      "color": "#444",
      "display": "block",
      "overflowX": "auto",
      "padding": "0.5em",
    }
  }
>
  <code
    style={
      Object {
        "whiteSpace": "pre",
      }
    }
  >
    <span
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      const
    </span>
    <span
      style={Object {}}
    >
       woah = 
    </span>
    <span
      className="hljs-function"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      fun
    </span>
    <span
      className="hljs-function"
      style={Object {}}
    >
       =&gt; 
    </span>
    <span
      className="hljs-function"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      fun
    </span>
    <span
      className="hljs-function"
      style={Object {}}
    >
       + 1;
    </span>
    <span
      style={Object {}}
    >
      

    </span>
    <span
      style={Object {}}
    >
      
    </span>
    <span
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      const
    </span>
    <span
      style={Object {}}
    >
       dude = woah(
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      2
    </span>
    <span
      style={Object {}}
    >
      ) + 
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      3
    </span>
    <span
      style={Object {}}
    >
      ;

    </span>
    function thisIsAFunction() {

    <span
      style={Object {}}
    >
        
    </span>
    <span
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      return
    </span>
    <span
      style={Object {}}
    >
       [
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      1
    </span>
    <span
      style={Object {}}
    >
      ,
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      2
    </span>
    <span
      style={Object {}}
    >
      ,
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      3
    </span>
    <span
      style={Object {}}
    >
      ].map(n =&gt; n + 
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      1
    </span>
    <span
      style={Object {}}
    >
      ).filter(n !== 
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      3
    </span>
    <span
      style={Object {}}
    >
      );

    </span>
    }

    <span
      style={Object {}}
    >
      console.log(
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      'making up fake code is really hard'
    </span>
    <span
      style={Object {}}
    >
      );

    </span>
    

    function itIs() {

    <span
      style={Object {}}
    >
        
    </span>
    <span
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      return
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      'no seriously really it is'
    </span>
    <span
      style={Object {}}
    >
      ;

    </span>
    }

    
  </code>
</p>
`;

exports[`SyntaxHighlighter renders div where pre tag is by default 1`] = `
<div
  style={
    Object {
      "background": "#F0F0F0",
      "color": "#444",
      "display": "block",
      "overflowX": "auto",
      "padding": "0.5em",
    }
  }
>
  <code
    style={
      Object {
        "whiteSpace": "pre",
      }
    }
  >
    <span
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      const
    </span>
    <span
      style={Object {}}
    >
       woah = 
    </span>
    <span
      className="hljs-function"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      fun
    </span>
    <span
      className="hljs-function"
      style={Object {}}
    >
       =&gt; 
    </span>
    <span
      className="hljs-function"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      fun
    </span>
    <span
      className="hljs-function"
      style={Object {}}
    >
       + 1;
    </span>
    <span
      style={Object {}}
    >
      

    </span>
    <span
      style={Object {}}
    >
      
    </span>
    <span
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      const
    </span>
    <span
      style={Object {}}
    >
       dude = woah(
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      2
    </span>
    <span
      style={Object {}}
    >
      ) + 
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      3
    </span>
    <span
      style={Object {}}
    >
      ;

    </span>
    function thisIsAFunction() {

    <span
      style={Object {}}
    >
        
    </span>
    <span
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      return
    </span>
    <span
      style={Object {}}
    >
       [
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      1
    </span>
    <span
      style={Object {}}
    >
      ,
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      2
    </span>
    <span
      style={Object {}}
    >
      ,
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      3
    </span>
    <span
      style={Object {}}
    >
      ].map(n =&gt; n + 
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      1
    </span>
    <span
      style={Object {}}
    >
      ).filter(n !== 
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      3
    </span>
    <span
      style={Object {}}
    >
      );

    </span>
    }

    <span
      style={Object {}}
    >
      console.log(
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      'making up fake code is really hard'
    </span>
    <span
      style={Object {}}
    >
      );

    </span>
    

    function itIs() {

    <span
      style={Object {}}
    >
        
    </span>
    <span
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      return
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      'no seriously really it is'
    </span>
    <span
      style={Object {}}
    >
      ;

    </span>
    }

    
  </code>
</div>
`;
